some css changes, attempted search on mobile fix

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ input {margin: 12px 0px; border: none; border-bottom: 1px solid #333; background
 .sml-button:hover {background: #eee;}
 .button-pressed {background: #0CCC96;}
 
-#info {padding: 30px 0px;}
+#info {padding: 14px 0px;}
 	
 .insta-embed{
     float: right;
@@ -126,16 +126,15 @@ input {margin: 12px 0px; border: none; border-bottom: 1px solid #333; background
 	/*
 	Label the data
 	*/
-	td:nth-of-type(1):before { content: "#"; }
-	td:nth-of-type(2):before { content: "Airline"; }
+	td:nth-of-type(1):before { content: "Airline"; }
 	/* td:nth-of-type(3):before { content: "Personal Items"; }
 	td:nth-of-type(4):before { content: "Personal Size"; } */
 	/* td:nth-of-type(3):before { content: "Carry-on Bags"; } */
-	td:nth-of-type(3):before { content: "Size (cm)"; }
-	td:nth-of-type(4):before { content: "Size (in)"; }
-	td:nth-of-type(5):before { content: "Linear"; }
-	td:nth-of-type(6):before { content: "Weight (kg)"; }
-	td:nth-of-type(7):before { content: "Weight (lb)"; }
-	td:nth-of-type(8):before { content: "Date Updated"; }
+	td:nth-of-type(2):before { content: "Size (cm)"; }
+	td:nth-of-type(3):before { content: "Size (in)"; }
+	td:nth-of-type(4):before { content: "Linear"; }
+	td:nth-of-type(5):before { content: "Weight (kg)"; }
+	td:nth-of-type(6):before { content: "Weight (lb)"; }
+	td:nth-of-type(7):before { content: "Updated"; }
 }
 }
